# perservant

./: .editorconfig  .ghci  .ghcid  .gitignore  .stylish-haskell.yaml  .travis.yml  LICENSE  Makefile  README.md  deploy.sh  hie.yaml  servant-persistent.cabal  stack.yaml
app/: DevelMain.hs  Main.hs
assets/: index.html
config/: keter.yml
src/: Api.hs  Config.hs  Database.hs  DevelMain.hs  Imports.hs  Init.hs  Logger.hs  Models.hs
src/Api/: User.hs
test/: ApiSpec.hs  UserDbSpec.hs
