cabal-version:       2.2
name:                servant-persistent
version:             0.2.0.0
synopsis:            Brief example on using persistent with servant
description:         Brief example on using persistent with servant
license:             MIT
license-file:        LICENSE
author:              Matt Parsons
maintainer:          parsonsmatt@gmail.com
copyright:           2016 Matt Parsons
category:            Web
build-type:          Simple

source-repository head
    type:
        git
    location:
        https://www.github.com/parsonsmatt/servant-persistent

executable perservant
    main-is:
        Main.hs
    build-depends:
        base-noprelude
      , relude
      , servant-persistent
      , persistent-postgresql
      , wai
      , warp
      , monad-logger
      , safe
      , monad-metrics
      , wai-middleware-metrics
      , microlens
      , ekg
      , ekg-core
      , pretty-simple
    hs-source-dirs:
        app
    default-language:
        Haskell2010
    ghc-options:
        -fwarn-unused-imports

library
    default-language:
        Haskell2010
    hs-source-dirs:
        src
    exposed-modules:
        Prelude
      , Config
      , Init
      , Models
      , Api
      , Api.User
      , Logger
      , DevelMain
    build-depends:
        base-noprelude
      , relude
      , aeson
      , bytestring
      , containers
      , ekg
      , ekg-core
      , fast-logger
      , foreign-store
      , katip
      , microlens
      , monad-control
      , monad-logger
      , monad-metrics
      , mtl
      , persistent
      , persistent-postgresql
      , persistent-template
      , safe
      , servant
      , servant-js
      , servant-server
      , text
      , transformers
      , unordered-containers
      , wai
      , wai-extra
      , wai-middleware-metrics
      , warp
      , resource-pool
    ghc-options:
        -fwarn-unused-imports

test-suite servant-persistent-test
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:
        Spec.hs
    other-modules:
        ApiSpec
        UserDbSpec
    build-depends:
        base-noprelude
      , relude
      , persistent
      , persistent-postgresql
      , servant-persistent
      , servant
      , servant-server
      , QuickCheck
      , hspec
      , mtl
      , transformers
      , text
      , monad-metrics
      , pretty-simple
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N -fwarn-unused-imports
    default-language:
        Haskell2010
