cabal-version:       2.2
name:                servant-persistent
version:             0.2.0.0
synopsis:            Brief example on using persistent with servant
description:         Brief example on using persistent with servant
license:             MIT
license-file:        LICENSE
author:              Matt Parsons
maintainer:          parsonsmatt@gmail.com
copyright:           2016 Matt Parsons
category:            Web
build-type:          Simple

source-repository head
    type:
        git
    location:
        https://www.github.com/parsonsmatt/servant-persistent

common default-settings
    default-extensions:
        NoImplicitPrelude
      , BangPatterns
      , BinaryLiterals
      , ConstraintKinds
      , DataKinds
      , DeriveDataTypeable
      , DeriveGeneric
      , DeriveFoldable
      , DeriveFunctor
      , DeriveTraversable
      , DerivingVia
      , EmptyCase
      , EmptyDataDecls
      , FlexibleContexts
      , FlexibleInstances
      , FunctionalDependencies
      , GADTs
      , GeneralizedNewtypeDeriving
      , InstanceSigs
      , KindSignatures
      , LambdaCase
      , MultiParamTypeClasses
      , MultiWayIf
      , NamedFieldPuns
      , OverloadedStrings
      , PartialTypeSignatures
      , PatternSynonyms
      , PolyKinds
      , RankNTypes
      , RecordWildCards
      , ScopedTypeVariables
      , StandaloneDeriving
      , TupleSections
      , TypeApplications
      , TypeFamilies
      , TypeOperators
      , ViewPatterns
    ghc-options:
      -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -Wno-name-shadowing -Wno-unused-top-binds -fhide-source-paths
    build-depends:
        base
      , aeson
      , aeson-schemas
      , bytestring
      , containers
      , ekg
      , ekg-core
      , exceptions
      , fast-logger
      , katip
      , lens
      , monad-control
      , monad-logger
      , monad-metrics
      , mtl
      , persistent
      , persistent-postgresql
      , persistent-template
      , profunctors
      , product-profunctors
      , postgresql-simple
      , opaleye
      , relude
      , resource-pool
      , safe
      , safe-exceptions
      , say
      , servant
      , servant-js
      , servant-server
      , text
      , time
      , transformers
      , unordered-containers
      , wai
      , wai-extra
      , wai-middleware-metrics
      , warp
    mixins:   base hiding (Prelude)

executable servant-persistent
    import: default-settings
    hs-source-dirs:
        app
    main-is:
        Main.hs
    other-modules:
        DevelMain
    build-depends:
        servant-persistent
      , foreign-store
      , pretty-simple
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N
    default-language:
        Haskell2010

library
    import: default-settings
    hs-source-dirs:
        src
    exposed-modules:
        Imports
      , Config
      , Database
      , Init
      , Models
      , Api
      , Api.User
      , Logger
    default-language:
        Haskell2010

test-suite servant-persistent-test
    import: default-settings
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:
        Spec.hs
    other-modules:
        ApiSpec
        UserDbSpec
    build-depends:
        servant-persistent
      , hspec
      , hedgehog
      , hspec-hedgehog
      , QuickCheck
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N
    default-language:
        Haskell2010
