cabal-version:       2.2
name:                servant-persistent
version:             0.2.0.0
synopsis:            Brief example on using persistent with servant
description:         Brief example on using persistent with servant
license:             MIT
license-file:        LICENSE
author:              Matt Parsons
maintainer:          parsonsmatt@gmail.com
copyright:           2016 Matt Parsons
category:            Web
build-type:          Simple

source-repository head
    type:
        git
    location:
        https://www.github.com/parsonsmatt/servant-persistent

common default-settings
    default-extensions:
        NoImplicitPrelude
      , NoMonomorphismRestriction
      , BangPatterns
      , BinaryLiterals
      , BlockArguments
      , ConstraintKinds
      , DataKinds
      , DeriveDataTypeable
      , DeriveFoldable
      , DeriveFunctor
      , DeriveGeneric
      , DeriveLift
      , DeriveTraversable
      , EmptyCase
      , EmptyDataDecls
      , EmptyDataDeriving
      , FlexibleContexts
      , FlexibleInstances
      , FunctionalDependencies
      , GADTs
      , GeneralizedNewtypeDeriving
      , InstanceSigs
      , KindSignatures
      , LambdaCase
      , MultiParamTypeClasses
      , MultiWayIf
      , NamedFieldPuns
      , NamedWildCards
      , NumericUnderscores
      , OverloadedStrings
      , ParallelListComp
      , PolyKinds
      , PostfixOperators
      , RankNTypes
      , RecordWildCards
      , ScopedTypeVariables
      , StandaloneDeriving
      , TupleSections
      , TypeApplications
      , TypeFamilies
      , TypeOperators
    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wpartial-fields
      -Wredundant-constraints
      -fhide-source-paths
      -fwrite-ide-info
      -hiedir=.hie
    build-depends:
        base
      , aeson
      , aeson-schemas
      , async
      , bytestring
      , conduit
      , containers
      , exceptions
      , foldl
      , generic-lens
      , lens
      , lens-aeson
      , monad-control
      , mtl
      , profunctors
      , relude
      , safe-exceptions
      , say
      , stm
      , text
      , time
      , transformers
      , typerep-map
      , unordered-containers
      , validation-selective
      , vector
      -------------------------------------------
      , ekg
      , ekg-core
      , fast-logger
      , http-conduit
      , http-types
      , katip
      , monad-logger
      , monad-metrics
      , opaleye
      , persistent
      , persistent-postgresql
      , persistent-template
      , postgresql-simple
      , product-profunctors
      , resource-pool
      , servant
      , servant-auth
      , servant-auth-server
      , servant-exceptions
      , servant-exceptions-server
      , servant-js
      , servant-server
      , wai
      , wai-extra
      , wai-middleware-metrics
      , warp
    mixins:   base hiding (Prelude)

executable servant-persistent
    import: default-settings
    hs-source-dirs:
        app
    main-is:
        Main.hs
    other-modules:
        DevelMain
    build-depends:
        servant-persistent
      , foreign-store
      , pretty-simple
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N
    default-language:
        Haskell2010

library
    import: default-settings
    hs-source-dirs:
        src
    exposed-modules:
        Imports
      , Config
      , Database
      , Init
      , Models
      , Api
      , Api.User
      , Logger
    default-language:
        Haskell2010

test-suite servant-persistent-test
    import: default-settings
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:
        Spec.hs
    other-modules:
        ApiSpec
        UserDbSpec
    build-depends:
        servant-persistent
      , hspec
      , hedgehog
      , hspec-hedgehog
      , QuickCheck
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N
    default-language:
        Haskell2010
